syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.example.grpc";
package org.example.grpc;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
  string time = 2;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}
